Added license attribution

--- a/collections/example-collection/assets/images/example_image/image.toml
+++ b/collections/example-collection/assets/images/example_image/image.toml
@@ -10,6 +10,7 @@ version = "1.0.0"
 
 # Use license identifiers (https://spdx.org/licenses/)
 license = "CC-BY-NC-4.0"
+attribution = "'Big Buck Bunny' by Peter Penacka is licensed under CC-BY-NC-4.0"
 
 # The authors who has created the image
 authors = [
