--- a/collections/example-collection/assets/fonts/example_font/font.toml
+++ b/collections/example-collection/assets/fonts/example_font/font.toml
@@ -10,6 +10,7 @@ version = "1.0.0"
 
 # Use license identifiers (https://spdx.org/licenses/)
 license = "CC-BY-NC-4.0"
+attribution = "'Example Font' by Peter Penacka is licensed under CC-BY-NC-4.0"
 
 # The authors who has created the font
 authors = [
